--- a/100_Python_Questions.ipynb
+++ b/100_Python_Questions.ipynb
@@ -701,6 +701,233 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4069.4400000000005"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Question 29 (2 points)\n",
+    "\n",
+    "# Write a function that calculates liquid volume\n",
+    "\n",
+    "def liquid_volume(h):\n",
+    "    r = 10\n",
+    "    lv = ((4*3.14*r**3)/3) - ((3.14*h**2*(3*r - h))/3)\n",
+    "    return lv\n",
+    "\n",
+    "liquid_volume(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Question 30 (1 point)\n",
+    "\n",
+    "# This will give you an error due to not having a in the function itself\n",
+    "\n",
+    "# def foo(a=2, b):\n",
+    "#     return a + b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Question 31 (SKIPPED)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# # Question 32 (2 points)\n",
+    "\n",
+    "# What will the following script output? Please try to do this mentally if you can.\n",
+    "\n",
+    "# c = 1\n",
+    "# def foo():\n",
+    "#     return c\n",
+    "# c = 3\n",
+    "# print(foo())\n",
+    "\n",
+    "# This will return 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Question 33 (FAILED)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 34\n",
+    "\n",
+    "# The following script throws a NameError  in the last line saying that c  is not defined. Please fix the function so that there is no error and the last line is able to print out the value of c  (i.e. 1 ).\n",
+    "\n",
+    "# def foo(): \n",
+    "#     c = 1 \n",
+    "#     return c \n",
+    "# foo() \n",
+    "# print(c)\n",
+    "\n",
+    "def foo(): \n",
+    "    c = 1 \n",
+    "    return c \n",
+    "foo() \n",
+    "print(foo())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Question 35 (2 points)\n",
+    "\n",
+    "# Create a function that takes any string as input and returns the number of words for that string.\n",
+    "\n",
+    "def split(str):\n",
+    "    return len(str.split())\n",
+    "    \n",
+    "split(\"This is a string\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 36 (FAILED)\n",
+    "\n",
+    "def count_words(filepath):\n",
+    "    with open(filepath, 'r') as file:\n",
+    "        strng = file.read()\n",
+    "        strng_list = strng.split(\" \")\n",
+    "        return len(strng_list)\n",
+    " \n",
+    "print(count_words(\"words1.txt\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "59"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Question 37 (3 points)\n",
+    "\n",
+    "def count_words(filepath):\n",
+    "    with open(filepath, 'r') as file:\n",
+    "        strng = file.read()\n",
+    "        strng.replace(\",\", \" \")\n",
+    "        return len(strng)\n",
+    "    \n",
+    "count_words(\"words2.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Question 38 (1 point)\n",
+    "# The following code is supposed to print out the square root of 9, \n",
+    "# but it throws an error instead because another line before that is missing. \n",
+    "# Please fix the script so that it prints out the square root of 9.\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "math.sqrt(9)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
