Added up to question 44

--- a/100_Python_Questions.ipynb
+++ b/100_Python_Questions.ipynb
@@ -356,7 +356,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# # Question 15 (1 point)\n",
@@ -691,7 +693,9 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Question 28 (2 points)\n",
@@ -802,7 +806,7 @@
     }
    ],
    "source": [
-    "# Question 34\n",
+    "# Question 34 (2 points)\n",
     "\n",
     "# The following script throws a NameError  in the last line saying that c  is not defined. Please fix the function so that there is no error and the last line is able to print out the value of c  (i.e. 1 ).\n",
     "\n",
@@ -924,6 +928,136 @@
     "import math\n",
     "\n",
     "math.sqrt(9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5403023058681398"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Question 39 (1 point) \n",
+    "\n",
+    "# The script is supposed to output the cosine of angle 1 radian, but instead it is throwing an error. \n",
+    "# Please fix the code so that it prints out the expected output.\n",
+    "\n",
+    "# import math\n",
+    "# print(math.cosine(1))\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "math.cos(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Question 40 (1 point)\n",
+    "\n",
+    "# Please try to guess what is missing in the following code and add the missing part so that the code works fine.\n",
+    "\n",
+    "math.pow(1,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Question 41(FAILED)\n",
+    "\n",
+    "import string\n",
+    " \n",
+    "with open(\"letters.txt\", \"w\") as file:\n",
+    "    for letter in string.ascii_lowercase:\n",
+    "        file.write(letter + \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 42 (FAILED)\n",
+    "\n",
+    "a = [1,2,3]\n",
+    "b = (4,5,6)\n",
+    "\n",
+    "for i, j in zip(a,b):\n",
+    "    print(i + j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Question 43 (FAILED)\n",
+    "\n",
+    "import string\n",
+    "\n",
+    "with open(\"letters.txt\", \"w\") as file:\n",
+    "    for letter1, letter2 in zip(string.ascii_lowercase[0::2], string.ascii_letters[1::2]):\n",
+    "        file.write(letter1 + letter2 + \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Question 44 (3 points)\n",
+    "\n",
+    "import string\n",
+    "\n",
+    "with open(\"letters_2.txt\", \"w\") as file:\n",
+    "    for letter1, letter2, letter3 in zip(string.ascii_lowercase[0::2], string.ascii_letters[1::2], string.ascii_letters[2::2]):\n",
+    "        file.write(letter1 + letter2 + letter3 + \"\\n\")"
    ]
   },
   {
