--- a/100_Python_Questions.ipynb
+++ b/100_Python_Questions.ipynb
@@ -1062,6 +1062,156 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Question 45 (FAILED)\n",
+    "\n",
+    "# Please create a script that generates 26 text files named a.txt, b.txt, \n",
+    "# and so on up to z.txt. Each file should contain a letter reflecting its filename. \n",
+    "# So, a.txt will contain letter a, b.txt will contain letter b and so on.\n",
+    "\n",
+    "import string, os\n",
+    "\n",
+    "if not os.path.exists(\"letters\"):\n",
+    "    os.makedirs(\"letters\")\n",
+    "    \n",
+    "for letter in string.ascii_lowercase:\n",
+    "    with open(\"letters/\" + letter + \" .txt\", \"w\") as file:\n",
+    "        file.write(letter + \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 46 (FAILED)\n",
+    "\n",
+    "import glob \n",
+    "\n",
+    "letters = []\n",
+    "file_list = glob.glob(\"letters/*.txt\")\n",
+    "\n",
+    "for filename in file_list:\n",
+    "    with open(filename, \"r\") as file:\n",
+    "        letters.append(file.read().strip(\"\\n\"))\n",
+    "        \n",
+    "print(letters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 47 (FAILED)\n",
+    "\n",
+    "import glob\n",
+    "\n",
+    "letters = []\n",
+    "file_list = glob.iglob(\"letter/*.txt\")\n",
+    "check = \"python\"\n",
+    "\n",
+    "for filename in file_list:\n",
+    "    with open(filename, \"r\") as file:\n",
+    "        letter = file.read().strip(\"\\n\")\n",
+    "        if letter in check:\n",
+    "            letters.append(letter)\n",
+    "            \n",
+    "print(letters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 48 (1 point)\n",
+    "\n",
+    "# The script is supposed to print out letter \"e\" if the letter is in string \"Hello\", \n",
+    "# but it doesn't. Please try to fix the script.\n",
+    "\n",
+    "# for letter in \"Hello\":\n",
+    "#     if letter == \"e\":\n",
+    "#     print(letter)\n",
+    "\n",
+    "for letter in \"Hello\":\n",
+    "    if letter == \"e\":\n",
+    "        print(letter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter your password: Password\n"
+     ]
+    }
+   ],
+   "source": [
+    "# # Question 49 (2 points)\n",
+    "\n",
+    "# The code is supposed to get some input from the user, \n",
+    "# but instead it produces an error. Please try to understand the error and then fix it.\n",
+    "\n",
+    "# Change variable \"pass\" to \"password\"\n",
+    "\n",
+    "password = input(\"Please enter your password: \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Question 50 (2 points)\n",
+    "\n",
+    "#The code produces an error. Please understand the error and try to fix it\n",
+    "\n",
+    "age = input(\"What's your age? \")\n",
+    "age_last_year = (age) - 1\n",
+    "print(\"Last year you were %s.\" % age_last_year)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
