--- a/100_Python_Questions.ipynb
+++ b/100_Python_Questions.ipynb
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        " 200]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -329,16 +329,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, '1']"
+       "['1', 2, 1]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
        "2"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
        "3"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
        "{'a': 1, 'b': 2, 'c': 3}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
        "6"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
        " 'c': [21, 22, 23, 24, 25, 26, 27, 28, 29, 30]}"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
        "13"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
        "0.5"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
        "4069.4400000000005"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
        "4"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
        "59"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
        "3.0"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
        "0.5403023058681398"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
        "1.0"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1173,14 +1173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter your password: Password\n"
+      "Please enter your password: password\n"
      ]
     }
    ],
@@ -1197,17 +1197,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What's your age? 25\n",
+      "Last year you were 24.\n"
+     ]
+    }
+   ],
    "source": [
     "# Question 50 (2 points)\n",
     "\n",
     "#The code produces an error. Please understand the error and try to fix it\n",
     "\n",
+    "# Converted age to integer\n",
+    "\n",
     "age = input(\"What's your age? \")\n",
-    "age_last_year = (age) - 1\n",
+    "age_last_year = int(age) - 1\n",
     "print(\"Last year you were %s.\" % age_last_year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 51 (1 point)\n",
+    "\n",
+    "#  The code produces an error. Please understand the error and try to fix it\n",
+    "\n",
+    "# print(type(\"Hey\".replace(\"ey\",\"i\")[-1])\n",
+    "\n",
+    "# Add one more parenthesis\n",
+    "\n",
+    "print(type(\"Hey\".replace(\"ey\",\"i\")[-1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first name: Jon\n",
+      "Enter second name: Paradiso\n",
+      "Your first name is Jon and your second name is Paradiso\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 52 (2 points)\n",
+    "\n",
+    "# The code is supposed to ask the user to enter their name and surname and then it prints out those user submitted values. \n",
+    "# Instead, the code throws a TypeError. Please fix it so that the expected output is printed out.\n",
+    "\n",
+    "# firstname = input(\"Enter first name: \")\n",
+    "# secondname = input(\"Enter second name: \")\n",
+    "# print(\"Your first name is %s and your second name is %s\" % firstname, secondname)\n",
+    "\n",
+    "firstname = input(\"Enter first name: \")\n",
+    "secondname = input(\"Enter second name: \")\n",
+    "print(\"Your first name is %s and your second name is %s\" %(firstname, secondname))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Smith'"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Question 53 (2 points)\n",
+    "\n",
+    "# Print out the last name of the second employee.\n",
+    "\n",
+    "d = {\"employees\":[{\"firstName\": \"John\", \"lastName\": \"Doe\"},\n",
+    "                {\"firstName\": \"Anna\", \"lastName\": \"Smith\"},\n",
+    "                {\"firstName\": \"Peter\", \"lastName\": \"Jones\"}],\n",
+    "\"owners\":[{\"firstName\": \"Jack\", \"lastName\": \"Petter\"},\n",
+    "          {\"firstName\": \"Jessy\", \"lastName\": \"Petter\"}]}\n",
+    "\n",
+    "d[\"employees\"][1][\"lastName\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'employees': [{'firstName': 'John', 'lastName': 'Doe'},\n",
+       "  {'firstName': 'Anna', 'lastName': 'Smooth'},\n",
+       "  {'firstName': 'Peter', 'lastName': 'Jones'}],\n",
+       " 'owners': [{'firstName': 'Jack', 'lastName': 'Petter'},\n",
+       "  {'firstName': 'Jessy', 'lastName': 'Petter'}]}"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Question 54 (2 points)\n",
+    "\n",
+    "d[\"employees\"][1][\"lastName\"] = \"Smooth\"\n",
+    "\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Question 55\n",
+    "\n"
    ]
   },
   {
